[web] make sure #about-btn is all the way to the right when overflow-x

--- a/web/src/css/App.less
+++ b/web/src/css/App.less
@@ -13,6 +13,12 @@ body {
     background-color: pink;
 }
 
+#layout {
+    display: inline-block;
+    min-width: 100%;
+    position: relative;
+}
+
 a {
     text-decoration: none;
     &:hover {
